@@ -211,12 +211,9 @@ This may be used to partition or classify sets into two equivalence
 classes:
       <dl>
        <dt> x.biper(0) == x</dt>
-       <dd> The set of elements that are in x.<! --  [This is really the same
-as x, but the system doesn't really understand this right now wrt
-the equality operator etc. XXX/BUG/TODO] --></dd>
+       <dd> The set of elements that are in x.</dd>
        <dt> x.biper(1) == ~x</dt>
-       <dd> The set of elements that are not in x.<! --  XXX [ But see above ]
- --></dd></dl></dd></dl></dd>
+       <dd> The set of elements that are not in x.</dd></dl></dd></dl></dd>
    <dd><a name='heapykinds.UniSet.brief'>x<code>.</code><strong><big>brief</big></strong></a><code>:</code>&nbsp;<em>string</em></dd>
    <dd>
     <dl>
@@ -234,8 +231,7 @@ brief representation is typically much shorter than the non-brief one.)
 x.dictof is the kind representing the set of all those dict objects.
 In effect, .dictof maps lambda x:getattr(x, '__dict__') on the
 objects in x. But it is symbolically evaluated to generate a new
-symbolic set (a Kind).<! --  XXX [Even if x was an IdentitySet should this change?]
- --></dd></dl></dd></dl><a name='heapykinds.Kind'>
+symbolic set (a Kind).</dd></dl></dd></dl><a name='heapykinds.Kind'>
    <h1>.tgt.heapykinds.Kind</h1></a>
   <dl>
    <dt>
@@ -662,9 +658,9 @@ stopkind = (
 	    hp.Type.Type.dictof |
 	    hp.Type.Code |
 	    hp.Type.Frame
-	    )</pre><! --  end pre --></dd>
+	    )</pre></dd>
          <dt><code>nocyc</code><strong>&nbsp;=&nbsp;</strong><em>boolean+</em></dt>
-         <dd> When True, certain cycles will not be followed.<! --  XXX expand on this or remove. --></dd>
+         <dd> When True, certain cycles will not be followed.</dd>
          <dd>
           <dl>
            <dt><strong>Default: </strong>False</dt>
@@ -1211,8 +1207,7 @@ False
 &gt;&gt;&gt; hp.Size(56) in hp.Size # An equivalence class of hp.Size
 True
 &gt;&gt;&gt; hp.Type.Int in hp.Size # Not an equivalence class of hp.Size
-False</pre><! --  end pre
- --></dd></dl></dd>
+False</pre></dd></dl></dd>
      <dd>
       <dl>
        <dt><strong><big>Note</big></strong></dt>
@@ -1220,12 +1215,7 @@ False</pre><! --  end pre
  Mathematically equivalence relations are often modelled as
 set of pairs of equal elements, I considered to mimic this in the
 implementation of the inclusion test but found some problems and I
-think another model is more useful here.</small><! -- 
- -- I just added this function
-while writing this doc because the inclusion test was undefined before
-so EquivalenceRelation didn't really derive from UniSet in a strict
-sense - so the inclusion test is not tested much and likely to have
-some bugs. --></dd></dl></dd>
+think another model is more useful here.</small></dd></dl></dd>
      <dd>
       <dl></dl></dd></dl></dd>
    <dd><a name='heapy_ER.EquivalenceRelation.op:-38-'></a>x <big><strong>&amp;</strong></big> <var>y</var><code>:</code>&nbsp;<em>EquivalenceRelation+</em> <strong>-></strong> <a href='#heapykinds.EquivalenceRelation'>EquivalenceRelation</a>
@@ -1255,8 +1245,7 @@ Partition of a set of 5 objects. Total size = 172 bytes.
      0      2  40      120  70       120  70 list &amp; 60
      1      1  20       28  16       148  86 list &amp; 28
      2      2  40       24  14       172 100 int &amp; 12
-&gt;&gt;&gt; </pre><! --  end pre
- --></dd></dl></dd>
+&gt;&gt;&gt; </pre></dd></dl></dd>
      <dd>
       <dl>
        <dt><strong><big>Note</big></strong></dt>
@@ -1357,8 +1346,7 @@ may be of different class.
 True
 &gt;&gt;&gt; hp.Type &lt; hp.Class
 False
-&gt;&gt;&gt; </pre><! --  end pre
- --></dd></dl></dd>
+&gt;&gt;&gt; </pre></dd></dl></dd>
      <dd>
       <dl>
        <dt><strong><big>Note</big></strong></dt>
@@ -1401,8 +1389,7 @@ Partition of a set of 1512 objects. Total size = 715008 bytes.
      0    140   9   225056  31    225056  31 dict of        24
      1    336  22   172800  24    397856  56 dict of        44
      2    582  38   152112  21    549968  77 dict (no owner)
-     3    347  23    92120  13    642088  90 dict of        32</pre><! --  end pre
- -->
+     3    347  23    92120  13    642088  90 dict of        32</pre>
  This shows that there are 140 dicts that are owned by
 some objects of size 24, 336 dicts that are owned by some objects
 of size 44, 582 dicts without owner and so on.
@@ -1423,8 +1410,7 @@ construction, where the underlying equivalence relation is <em>Use.Clodo.</em>
        <pre>
 
 &gt;&gt;&gt; hp.Clodo.refdby == hp.Rcs
-True</pre><! --  end pre
- --></p></dd></dl></dd>
+True</pre></p></dd></dl></dd>
    <dd>
     <dl>
      <dd>
@@ -1495,4 +1481,4 @@ associated with the owner classification of x, though this is not
 currently checked.
 
 </small></dd></dl></dd></dl></dl>
-  <hr>Generated by <a href="http://guppy-pe.sourceforge.net/gsl.html">GSL-HTML 0.1.5</a> on Wed May 14 11:31:36 2008</div></body></html>
+  <hr>Generated by <a href="http://guppy-pe.sourceforge.net/gsl.html">GSL-HTML 0.1.5</a> on Tue May 20 14:42:28 2008</div></body></html>
