@@ -248,8 +248,7 @@ Partition of a set of 3 objects. Total size = 176 bytes.
 &gt;&gt;&gt; x=[]
 &gt;&gt;&gt; h.iso(x).sp
  0: h.Root.i0_modules['__main__'].__dict__['x']
-&gt;&gt;&gt; </pre><! --  end pre
- --></p><a name='GSL'>
+&gt;&gt;&gt; </pre></p><a name='GSL'>
    <h2> GSL</h2></a>
   <p>
  The Guppy Specification Language is an evolving specification
@@ -484,7 +483,7 @@ had become outdated.</td></tr>
  Original version. Extension modules could not be compiled using
 strict ANSI C compilers.</td></tr>
    <tr>
-    <td id='last' colspan='5'></td></tr></table><! --  --><a name='Credits'>
+    <td id='last' colspan='5'></td></tr></table><a name='Credits'>
    <h2> Credits</h2></a>
   <ul>
    <li>
@@ -521,4 +520,4 @@ system:
    <dd><a href='http://sourceforge.net/tracker/?group_id=105577&atid=641821'> http://sourceforge.net/tracker/?group_id=105577&amp;atid=641821</a></dd>
    <dt> The Sourceforge project summary page is:</dt>
    <dd><a href='http://sourceforge.net/projects/guppy-pe'> http://sourceforge.net/projects/guppy-pe</a></dd></dl>
-  <hr>Generated by <a href="http://guppy-pe.sourceforge.net/gsl.html">GSL-HTML 0.1.5</a> on Wed May 14 11:31:36 2008</div></body></html>
+  <hr>Generated by <a href="http://guppy-pe.sourceforge.net/gsl.html">GSL-HTML 0.1.5</a> on Tue May 20 14:42:28 2008</div></body></html>
